# dbt2looker

./: README.md  pyproject.toml
.github/workflows/: ci.yml  master.yml
dbt2looker/: cli.py  generator.py  models.py  parser.py
tests/dbt2looker/: test_generator.py
