[tool.poetry]
name = "dbt2looker"
version = "0.11.0"
description = "Generate lookml view files from dbt models"
authors = ["tnagengast <tom@replicated.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tnagengast/dbt2looker"
repository = "https://github.com/tnagengast/dbt2looker"

[tool.poetry.dependencies]
python = ">=3.9"
lkml = "^1.2.0"
pydantic = "^1.10.2"
PyYAML = "^6.0"
jsonschema = "^4.16.0"
typing-extensions = "^4.3.0"
importlib-metadata = "^4.12.0"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
tox = "^3.25.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dbt2looker = 'dbt2looker.cli:run'
